# spotify-backup

./: .gitignore  Makefile  make-csv.zsh  pyproject.toml  spotify-backup.py
