[tool.poetry]
name = "spotify-backup-fork"
version = "0.1.0"
description = ""
authors = ["Chris M <cr.mocz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
